Task#36 Store payouts for game to get global player statistics Statistics:  - Mocked tests added for most of them.  - Changed player in game service logic as iit contained an issue  - added new exception
 Adjusted Bounty for send message